# system-prompts-and-models-of-ai-tools

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
dealix/: .dockerignore  .editorconfig  .env.example  .env.staging.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEALIX_COMPANY_OPERATIONAL_STATE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  Procfile  QUICK_START.md  README.ar.md  README.md  SECURITY.md  cli.py  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  v3_app.py
dealix/.cursor/rules/: dealix-v3.mdc
dealix/.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
dealix/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dealix/.github/workflows/: README.md  ci.yml  codeql.yml  daily-revenue-machine.yml  deploy.yml  docker-build.yml  railway_deploy.yml  release-please.yml  release.yml  scheduled_healthcheck.yml  staging-smoke.yml
dealix/api/: dependencies.py  deps.py  main.py  middleware.py
dealix/api/routers/: admin.py  agent_observability.py  agents.py  automation.py  autonomous.py  autonomous_service_operator.py  business.py  cards.py  command_center.py  connector_catalog.py  connector_router.py  customer_ops.py  customer_success.py  data.py  dominance.py  drafts.py  ecosystem.py  email_send.py  full_os.py  growth_curator.py  growth_operator.py  health.py  innovation.py  intelligence_layer.py  launch_ops.py  leads.py  meeting_intelligence.py  model_router.py  outreach.py  personal_operator.py  platform_services.py  pricing.py  prospect.py  public.py  public_launch.py  revenue.py  revenue_company_os.py  revenue_launch.py  revenue_os.py  sales.py  (+7 more)
dealix/api/schemas/: __init__.py
dealix/api/security/: __init__.py  api_key.py  rate_limit.py  webhook_signatures.py
dealix/auto_client_acquisition/: __init__.py  pipeline.py
dealix/auto_client_acquisition/agent_observability/: __init__.py  cost_tracker.py  eval_cases.py  safety_eval.py  saudi_tone_eval.py  (+1 more)
dealix/autonomous_growth/: __init__.py  orchestrator.py
dealix/core/: __init__.py  _py_compat.py  errors.py  logging.py  utils.py
dealix/dashboard/: README.md  __init__.py  analytics.py  app.py
dealix/db/: __init__.py  models.py  session.py
dealix/dealix/: __init__.py
dealix/docs/: AGENCY_PARTNER_MODE.md  AGENT_OBSERVABILITY_EVALS.md  AGENT_SECURITY_CURATOR.md  AGENT_WORKFLOW_ARCHITECTURE.md  AI_MODEL_ROUTING_STRATEGY.md  AI_OBSERVABILITY_AND_EVALS.md  AI_STACK_DECISIONS.md  API_REFERENCE.md  APPROVED_MARKET_MESSAGING.md  ARABIC_GROWTH_OPERATOR_FULL_SPEC.md  AUTONOMOUS_REVENUE_COMPANY_OS.md  AUTONOMOUS_SERVICE_OPERATOR.md  BETA_PRIVATE_GATES_CHECKLIST.md  BILLING_MOYASAR_RUNBOOK.md  BILLING_RUNBOOK.md  BRANCH_PROTECTION_AND_CI.md  BUSINESS_MODEL.md  CEO_COMMAND_CENTER.md  COMMERCIAL_GO_LIVE_CHECKLIST.md  COMMERCIAL_LAUNCH_MASTER_PLAN.md  COMPETITIVE_POSITIONING.md  CONNECTOR_CATALOG.md  CONNECTOR_SETUP_GUIDES.md  COST_OPTIMIZATION.md  CUSTOMER_JOURNEYS.md  CUSTOMER_SUCCESS_PLAYBOOK.md  DASHBOARD.md  DATA_MAP.md  DATA_RETENTION_POLICY.md  DEALIX_100_PERCENT_LAUNCH_PLAN.md  DEALIX_V3_AUTONOMOUS_REVENUE_OS.md  DEMO_SCRIPT_12_MINUTES.md  DEPLOY_CHECKLIST.md  DPA_PILOT_TEMPLATE.md  DRILL_PLAN.md  EMBEDDINGS_PIPELINE.md  EVALS_RUNBOOK.md  EXECUTION_ROADMAP_AR.md  FIRST_20_OUTREACH_MESSAGES.md  FIRST_PILOT_DELIVERY_WORKFLOW.md  (+75 more)
dealix/evals/: personal_operator_cases.jsonl  revenue_os_cases.jsonl
dealix/integrations/: calendar.py  email.py  hubspot.py  linkedin.py  n8n.py  saudi_market.py  whatsapp.py
dealix/landing/: 404.html  500.html  academy.html  agency-partner.html  autopilot.html  case-study.html  command-center-en.html  command-center.html  community.html  companies.html  copilot.html  customer-portal.html  dashboard.html  first-10-opportunities.html  founder.html  free-diagnostic.html  growth-os.html  index.html  launch-readiness.html  list-intelligence.html  market-radar.html  marketers.html  partners.html  pay-per-result.html  payment-cancelled.html  payment-success.html  personal-operator.html  posthog_snippet.html  pricing.html  privacy.html  private-beta-en.html  private-beta.html  pulse.html  robots.txt  robots_dealix.txt  roi.html  script.js  services-en.html  services.html  signup.html  (+10 more)
dealix/scripts/: analyze_directory_duckdb.py  audit_lead_file.py  daily_operate.sh  daily_tech_watch.sh  dealix_prospect.py  dealix_reply_classifier.py  discover_local_to_csv.py  embeddings_pipeline_placeholder.py  export_outreach_ready.py  fetch_proof_ledger_weekly.py  generate_launch_report.py  github_setup.sh  guard_dealix_bash.py  guard_dealix_changes.py  import_leads.py  index_project_memory.py  launch_now.sh  launch_readiness_check.py  paid_beta_daily_scorecard.py  print_routes.py  run_demo.py  run_evals.py  seed_data.py  seed_demo_data.py  seed_production_db.py  smoke_inprocess.py  smoke_local_api.py  smoke_staging.py  smoke_test.sh  verify_supabase_project_memory.sql
dealix/tests/: conftest.py  test_autonomous_service_operator.py  test_billing_amounts.py  test_billing_moyasar_safety.py  test_business_strategy.py  test_customer_ops.py  test_growth_tower_stack.py  test_innovation_layer.py  test_integration_drafts_aca.py  test_integrations.py  test_intelligence_layer.py  test_launch_ops.py  test_launch_readiness.py  test_launch_report.py  test_model_router.py  test_moyasar_webhook.py  test_paid_beta_daily_scorecard.py  test_personal_operator.py  test_personal_operator_memory.py  test_platform_services.py  test_positioning_lock.py  test_project_intelligence.py  test_proof_pack.py  test_revenue_company_os.py  test_revenue_launch.py  test_role_based_cards.py  test_service_excellence.py  test_service_tower.py  test_settings_whatsapp.py  test_targeting_os.py  test_verticals.py  test_whatsapp_cards.py  test_whatsapp_signature.py
salesflow-saas/backend/: .env.phase2.example  Dockerfile  README_DEPLOY.md  alembic.ini  main.py  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  seed_data.sql  start.sh
(+1876 files in other folders)
